se agrega el punto 2 completo

--- a/Taller2_1Sistema_ecuaciones.ipynb
+++ b/Taller2_1Sistema_ecuaciones.ipynb
@@ -9,20 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solución del problema:\n",
-    "1.a"
+    "### Solución del problema:\n",
+    "### 1.a"
    ]
   },
   {
@@ -34,11 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_1 = np.array([[2, 4, 5], [6, 9, 8], [4.1, 5, 3]])\n",
+    "A_1 = np.array([[2, 4, 5], \n",
+    "                [6, 9, 8], \n",
+    "                [4.1, 5, 3]])\n",
     "B_1 = np.array([220, 490, 274])"
    ]
   },
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -93,43 +94,43 @@
        "array([40., 10., 20.])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_1 = np.linalg.inv(A_1).dot(B)\n",
+    "X_1 = np.linalg.inv(A_1).dot(B_1)\n",
     "X_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The price per hour in processor A is: 39.99999999999967\n",
-      "The price per hour in processor B is: 10.0000000000007\n",
-      "The price per hour in processor C is: 20.000000000000057\n"
+      "El precio por hora del procesador A es: 39.99999999999967\n",
+      "El precio por hora del procesador B es: 10.0000000000007\n",
+      "El precio por hora del procesador B es: 20.000000000000057\n"
      ]
     }
    ],
    "source": [
-    "print(\"The price per hour in processor A is:\", X_1[0])\n",
-    "print(\"The price per hour in processor B is:\", X_1[1])\n",
-    "print(\"The price per hour in processor C is:\", X_1[2])"
+    "print(\"El precio por hora del procesador A es:\", X_1[0])\n",
+    "print(\"El precio por hora del procesador B es:\", X_1[1])\n",
+    "print(\"El precio por hora del procesador B es:\", X_1[2])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solución del problema:\n",
-    "1.b"
+    "### Solución del problema:\n",
+    "### 1.b"
    ]
   },
   {
@@ -141,18 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_2 = np.array([[2, 4, 5], [6, 9, 8], [4.2, 5, 3]])\n",
+    "A_2 = np.array([[2, 4, 5], \n",
+    "                [6, 9, 8], \n",
+    "                [4.2, 5, 3]])\n",
     "B_2 = np.array([220, 490, 274])\n",
     "X_2 = np.linalg.inv(A_2).dot(B_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +190,7 @@
        "array([20.        , 31.53846154, 10.76923077])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,35 +202,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The price per hour in processor A is: 20.00000000000013\n",
-      "The price per hour in processor B is: 31.538461538461764\n",
-      "The price per hour in processor C is: 10.769230769230754\n"
+      "El precio por hora del procesador A es: 20.00000000000013\n",
+      "El precio por hora del procesador B es: 31.538461538461764\n",
+      "El precio por hora del procesador C es: 10.769230769230754\n"
      ]
     }
    ],
    "source": [
-    "print(\"The price per hour in processor A is:\", x_2[0])\n",
-    "print(\"The price per hour in processor B is:\", x_2[1])\n",
-    "print(\"The price per hour in processor C is:\", x_2[2])"
+    "print(\"El precio por hora del procesador A es:\", x_2[0])\n",
+    "print(\"El precio por hora del procesador B es:\", x_2[1])\n",
+    "print(\"El precio por hora del procesador C es:\", x_2[2])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora vamos a calcular el error relativo de A "
+    "Ahora vamos a calcular el error relativo del precio por hora del procesador A\n",
+    "siendo  x=39.99999999999967 y y=20.00000000000013 los resultados de los sistemas de ecuaciones solucionados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -259,12 +263,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora vamos a calcular el error relativo de B"
+    "Ahora vamos a calcular el error relativo del precio por hora del procesador B\n",
+    "siendo  x=10.0000000000007 y y=31.538461538461764 los resultados de los sistemas de ecuaciones solucionados "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -286,12 +291,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora vamos a calcular el error relativo de c"
+    "Ahora vamos a calcular el error relativo del precio por hora del procesador C\n",
+    "siendo  x=20.000000000000057 y y=10.769230769230754 los resultados de los sistemas de ecuaciones solucionados "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -313,87 +319,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La condición de una matriz, también conocida como número de condición, es una medida que se utiliza en el campo del análisis numérico para evaluar cuán sensible es una matriz a pequeños cambios en sus elementos o en sus términos de entrada"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Debemos de generar la condición de la matriz A y para esto debemos de hallar la norma de A\n",
+    "Dando respueta a la pregunta <span style=\"color:green\"> Resuelva el sistema para ver como cambia el\n",
+    "valor de la hora en cada procesador, antes y después del error. Explique\n",
+    "si el cambio es grande o no y por qué se da este cambio. </span>\n",
     "\n",
-    "||A|| * ||A^(-1)||"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23.0"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Norma_A_1 = np.linalg.norm(A_1, ord=np.inf)\n",
-    "Norma_A_1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "33.307692307692335"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Norma_inv_A = np.linalg.norm(A_inv_1, ord=np.inf)\n",
-    "Norma_inv_A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "766.0769230769237"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "condicion_A = Norma_A_1 * Norma_inv_A\n",
-    "condicion_A"
+    "El cambio es grande, ya que el error relativo de cada una de las soluciones no esta dando muy alto, por lo general se busca minimizar el error relativo para obtener una medida o cálculo más precisa y confiable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "La cota superior superior para el error relativo seria:\n",
-    "(∥x∥ / ∥Δx∥) ≤κ(A) * (∥ΔA∥/∥A∥)\n",
+    "Ahora dando solución a <span style=\"color:green\"> Consulte una\n",
+    "cota superior para el error relativo en la solución de un sistema cuando\n",
+    "hay un cambio en los coeficientes de la matriz del sistema. </span>\n",
+    "\n",
+    "Para calcular la cota superior superior para el error relativo seria:\n",
+    "\n",
+    "(∥x∥ / ∥Δx∥) ≤ κ(A) * (∥ΔA∥ / ∥A∥)\n",
+    "\n",
     "siendo k(A) = condicion​"
    ]
   },
@@ -401,101 +350,217 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sacando la diferencia entre A_1 y A_2 tenemos "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0. ,  0. ,  0. ],\n",
-       "       [ 0. ,  0. ,  0. ],\n",
-       "       [-0.1,  0. ,  0. ]])"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "diferencia_As = A_1 - A_2 \n",
-    "diferencia_As"
+    "La condición de una matriz, también conocida como número de condición, es una medida que se utiliza en el campo del análisis numérico para evaluar cuán sensible es una matriz a pequeños cambios en sus elementos o en sus términos de entrada"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La cuota superior seria"
+    "Debemos de generar la condición de la matriz A y para esto debemos de hallar la norma de A, por la norma de la matriz inversa de A\n",
+    "\n",
+    "||A|| * ||A^(-1)||"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A1 = np.array([[2, 4, 5], \n",
+    "                [6, 9, 8], \n",
+    "                [4.1, 5, 3]])\n",
+    "\n",
+    "A2 = np.array([[2, 4, 5], \n",
+    "               [6, 9, 8], \n",
+    "               [4.2, 5, 3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora calcula la condición de la matiz A1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cond_A1 = np.linalg.cond(A1, p=np.inf) # Usamos la norma 2 o infinita de matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora calculamos la diferencia relativa entre A1 y A2 sobre la norma de A1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta = np.linalg.norm(A1 - A2, ord=np.inf) / np.linalg.norm(A1, ord=np.inf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora se calcula el limite superior para el error relativo de Epsilon (cota suprior)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epsilon = cond_A1 * delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La condición de la matriz A1: 766.0769230769237\n",
+      "La diferencia relativa entre A1 y A2: 0.004347826086956545\n",
+      "El limite superior del error relativo es: 3.3307692307692514\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La condición de la matriz A1:\", cond_A1)\n",
+    "print(\"La diferencia relativa entre A1 y A2:\", delta)\n",
+    "print(\"El limite superior o cota superior del error relativo es:\", epsilon )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R/ Como se puede ver la cota superior dio como resultado 3.3307692307692514 es que la matriz es muy sensible a pequeños cambios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora dando respuesta a <span style=\"color:green\"> Luego\n",
+    "calcule una cota superior para el error relativo en el valor de la hora\n",
+    "en los procesadores. </span>\n",
+    "\n",
+    "Dado un vector de referencia A y un vector de aproximación B, el error relativo se puede calcular de la siguiente manera:\n",
+    "\n",
+    "error relativo= ∥a∥ / ∥a−b∥\n",
+    "\n",
+    "Y para calcular la cota superior se puede utilizar la desigualdad triangular y las propiedades de la norma\n",
+    "\n",
+    "La cota superior para el error relativo se puede calcular de la siguiente manera:\n",
+    "\n",
+    "cota superior del error relativo=  ∥a−b∥ / ∥a∥ ≤ ∥a∥+∥b∥ / ∥a∥"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0. ,  0. ,  0. ],\n",
-       "       [ 0. ,  0. ,  0. ],\n",
-       "       [-0.1,  0. ,  0. ]])"
+       "array([40., 10., 20.])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diferencia_As[]"
+    "Vector_A = np.array([39.99999999999967, 10.0000000000007, 20.000000000000057])\n",
+    "Vector_A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.1,  0. ,  0. ]])"
+       "array([20.        , 31.53846154, 10.76923077])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cota_superior = diferencia_As[2:3]\n",
-    "cota_superior"
+    "Vector_B = np.array([20.00000000000013, 31.538461538461764, 10.769230769230754])\n",
+    "Vector_B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.330769230769233"
+       "array([0.5       , 2.15384615, 0.46153846])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cota = condicion_A*(0.1/Norma_A_1)\n",
-    "cota"
+    "error_relativo= np.abs(Vector_A - Vector_B) / np.abs(Vector_A)\n",
+    "error_relativo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2587764400038135"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cota_superior_del_valor = np.linalg.norm(error_relativo, ord=2)\n",
+    "cota_superior_del_valor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R/ Como se puede ver la cota superior dio como resultado 2.2587764400038135 es que vector es muy sensible a pequeños cambios"
    ]
   }
  ],
