Se agrega el punto 3 casi terminado

--- a/Taller2_1Sistema_ecuaciones.ipynb
+++ b/Taller2_1Sistema_ecuaciones.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Importando librerias"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -28,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Genero las ecuaciones"
+    "Se genero las ecuaciones"
    ]
   },
   {
@@ -102,6 +95,13 @@
    "source": [
     "X_1 = np.linalg.inv(A_1).dot(B_1)\n",
     "X_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se optiene los precops por hora de los procesadores A, B y C"
    ]
   },
   {
