Solo falta el 2.4

--- a/Taller2_3Algoritmo_sustitucion.ipynb
+++ b/Taller2_3Algoritmo_sustitucion.ipynb
@@ -1,62 +1,87 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np"
+    "## Metodo con Matrices triangulares A = L.U"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrices triangulares con A = LU"
+    "El objetivo de este notebook es resolver un problema de sistema de ecuaciones lineales utilizando el metodo de factorización A = LU, donde L es la matriz tringular inferior y U es la matriz triangular superior\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[ 3. , -0.1, -0.2],\n",
-    "              [ 0.1,  7. , -0.3],\n",
-    "              [ 0.3, -0.2, 10. ]], dtype=float)\n",
+    "import numpy as np\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz:\n",
+      "[[7 3 9]\n",
+      " [8 2 9]\n",
+      " [3 3 1]]\n",
+      "Vector:\n",
+      "[2 4 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = random.randint(2, 4)\n",
+    "A = np.random.randint(1, 10, size=(n, n))\n",
     "\n",
-    "B = np.array([7.85,-19.3,71.4], dtype=float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A = np.array([[ 1.0, 0.0, 0.0],\n",
-    "#               [ 0.03333333, 1.0, 0.0],\n",
-    "#               [ 0.1, -0.02712994, 1.0 ]], dtype=float)\n",
+    "# Generar un vector aleatorio de longitud n\n",
+    "B = np.random.randint(1, 10, size=n)\n",
     "\n",
-    "# B = np.array([20.0, 31.538461538461764, 10.769230769230754], dtype=float)"
+    "print(\"Matriz:\")\n",
+    "print(A)\n",
+    "print(\"Vector:\")\n",
+    "print(B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PROCEDIMIENTO\n",
+    "# #A = np.array([[ 3. , -0.1, -0.2],\n",
+    "#               [ 0.1,  7. , -0.3],\n",
+    "#               [ 0.3, -0.2, 10. ]], dtype=float)\n",
+    "\n",
+    "# #B = np.array([7.85,-19.3,71.4], dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "B  = np.transpose([B]) # Se transpone el vector para poder hacer la concatenación con la matriz\n",
     "AB = np.concatenate((A,B),axis=1) # Se concatena la matriz con el vector\n",
-    "AB = np.copy(AB) # Se genera una copia de la matriz aumentada"
+    "AB = np.copy(AB)  # Se genera una copia de la matriz aumentada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Para cada fila en AB\n",
-    "for i in range(0,n-1,1):  # Para cada fila en AB, se comienza desde la primer fila hasta la penultima fila\n",
+    "for i in range(0,n-1,1): # Para cada fila en AB, se comienza desde la primer fila hasta la penultima fila\n",
     "\n",
     "    # columna desde diagonal i en adelante\n",
-    "    columna = abs(AB[i:,i])  # Se optine la columna correspondiente al pivote en valor absoluto\n",
-    "    dondemax = np.argmax(columna) # Se encuentra la posición del elemento máximo en la columna\n",
+    "    columna = abs(AB[i:,i]) # Se optine la columna correspondiente al pivote en valor absoluto\n",
+    "    dondemax = np.argmax(columna)# Se encuentra la posición del elemento máximo en la columna\n",
     "\n",
     "    # Si la posición del elemento máximo no es 0(es decir, el elemto máximo no esta en la diagonal), se intercambian las filas i y dondemax + i\n",
     "    # dondemax no está en diagonal\n",
@@ -100,6 +125,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8, 2, 9, 4],\n",
+       "       [7, 3, 9, 2],\n",
+       "       [3, 3, 1, 7]])"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AB1  # Matriz reemplazada\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8, 2, 9],\n",
+       "       [7, 3, 9],\n",
+       "       [3, 3, 1]])"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A1 # Matriz reemplazada ni el vector inicial "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 2, 7])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B1 ## Vector resultado inicial "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,204 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# eliminacion hacia adelante\n",
-    "# se inicializa L\n",
-    "L = np.identity(n,dtype=float)\n",
-    "for i in range(0,n-1,1):\n",
-    "    pivote = AB[i,i]\n",
-    "    adelante = i+1\n",
-    "    for k in range(adelante,n,1):\n",
-    "        factor = AB[k,i]/pivote\n",
-    "        AB[k,:] = AB[k,:] - AB[i,:]*factor\n",
-    "        L[k,i] = factor\n",
-    "\n",
-    "U = np.copy(AB[:,:m-1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Por ultimo se optiene U y L: Después de completar la eliminación hacia adelante, las matrices U y L se extraen de la matriz extendida AB. La matriz U es la parte triangular superior de AB sin la última columna, y la matriz \n",
-    "L es la parte triangular inferior de AB con unos en la diagonal principal."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pivoteo parcial por filas\n",
-      "[[  3.    -0.1   -0.2    7.85]\n",
-      " [  0.1    7.    -0.3  -19.3 ]\n",
-      " [  0.3   -0.2   10.    71.4 ]]\n",
-      "eliminación hacia adelante\n",
-      "Matriz U: \n",
-      "[[ 3.         -0.1        -0.2       ]\n",
-      " [ 0.          7.00333333 -0.29333333]\n",
-      " [ 0.          0.         10.01204188]]\n",
-      "matriz L: \n",
-      "[[ 1.          0.          0.        ]\n",
-      " [ 0.03333333  1.          0.        ]\n",
-      " [ 0.1        -0.02712994  1.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Pivoteo parcial por filas')\n",
-    "print(AB1)\n",
-    "print('eliminación hacia adelante')\n",
-    "print('Matriz U: ')\n",
-    "print(U)\n",
-    "print('matriz L: ')\n",
-    "print(L)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Metodo con Matrices triangulares A = L.U"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.array([[ 3. , -0.1, -0.2],\n",
-    "              [ 0.1,  7. , -0.3],\n",
-    "              [ 0.3, -0.2, 10. ]], dtype=float)\n",
-    "\n",
-    "B = np.array([7.85,-19.3,71.4], dtype=float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B  = np.transpose([B])\n",
-    "AB = np.concatenate((A,B),axis=1)\n",
-    "AB = np.copy(AB)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pivoteo parcial por filas\n",
-    "tamano = np.shape(AB)\n",
-    "n = tamano[0]\n",
-    "m = tamano[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Para cada fila en AB\n",
-    "for i in range(0,n-1,1):\n",
-    "\n",
-    "    # columna desde diagonal i en adelante\n",
-    "    columna = abs(AB[i:,i])\n",
-    "    dondemax = np.argmax(columna)\n",
-    "\n",
-    "    # dondemax no está en diagonal\n",
-    "    if (dondemax !=0):\n",
-    "        # intercambia filas\n",
-    "        temporal = np.copy(AB[i,:])\n",
-    "        AB[i,:] = AB[dondemax+i,:]\n",
-    "        AB[dondemax+i,:] = temporal\n",
-    "\n",
-    "AB1 = np.copy(AB)\n",
-    "A1 = np.copy(AB[:,:m-1])\n",
-    "B1 = np.copy(AB[:,m-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  3.  ,  -0.1 ,  -0.2 ,   7.85],\n",
-       "       [  0.1 ,   7.  ,  -0.3 , -19.3 ],\n",
-       "       [  0.3 ,  -0.2 ,  10.  ,  71.4 ]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "AB1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 3. , -0.1, -0.2],\n",
-       "       [ 0.1,  7. , -0.3],\n",
-       "       [ 0.3, -0.2, 10. ]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  7.85],\n",
-       "       [-19.3 ],\n",
-       "       [ 71.4 ]])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,51 +217,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         7.85000000e+00],\n",
-       "       [ 3.33333333e-02,  1.00000000e+00,  0.00000000e+00,\n",
-       "        -1.93000000e+01],\n",
-       "       [ 1.00000000e-01, -2.71299381e-02,  1.00000000e+00,\n",
-       "         7.14000000e+01]])"
+       "array([[ 8,  2,  9],\n",
+       "       [ 0,  1,  1],\n",
+       "       [ 0,  0, -4]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "U # Triangular superior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.   , 0.   , 0.   ],\n",
+       "       [0.875, 1.   , 0.   ],\n",
+       "       [0.375, 2.   , 1.   ]])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L # Triangular inferior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Resolver LY = B   donde Y = B1\n",
     "B1  = np.transpose([B1])\n",
-    "AB =np.concatenate((L,B1),axis=1)\n",
-    "AB"
+    "AB =np.concatenate((L,B1),axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  7.85      ],\n",
-       "       [-19.56166667],\n",
-       "       [ 70.08429319]])"
+       "array([[1.   , 0.   , 0.   , 4.   ],\n",
+       "       [0.875, 1.   , 0.   , 2.   ],\n",
+       "       [0.375, 2.   , 1.   , 7.   ]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "AB   # AB = LY "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4. ],\n",
+       "       [-1.5],\n",
+       "       [ 8.5]])"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vamos a resolver LY\n",
     "# sustitución hacia adelante\n",
     "Y = np.zeros(n,dtype=float)\n",
     "Y[0] = AB[0,n]\n",
@@ -386,42 +328,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  3.        ,  -0.1       ,  -0.2       ,   7.85      ],\n",
-       "       [  0.        ,   7.00333333,  -0.29333333, -19.56166667],\n",
-       "       [  0.        ,   0.        ,  10.01204188,  70.08429319]])"
+       "array([[ 8. ,  2. ,  9. ,  4. ],\n",
+       "       [ 0. ,  1. ,  1. , -1.5],\n",
+       "       [ 0. ,  0. , -4. ,  8.5]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Resolver UX = Y\n",
+    "# Resolver UX = Y   donde Y=B1\n",
     "AB =np.concatenate((U,Y),axis=1)\n",
     "AB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3. ],\n",
-       "       [-2.5],\n",
-       "       [ 7. ]])"
+       "array([[ 2.734375],\n",
+       "       [ 0.625   ],\n",
+       "       [-2.125   ]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -453,30 +395,30 @@
      "output_type": "stream",
      "text": [
       "Pivoteo parcial por filas: AB\n",
-      "[[  3.    -0.1   -0.2    7.85]\n",
-      " [  0.1    7.    -0.3  -19.3 ]\n",
-      " [  0.3   -0.2   10.    71.4 ]]\n",
+      "[[8 2 9 4]\n",
+      " [7 3 9 2]\n",
+      " [3 3 1 7]]\n",
       "eliminación hacia adelante\n",
       "Matriz U: \n",
-      "[[ 3.         -0.1        -0.2       ]\n",
-      " [ 0.          7.00333333 -0.29333333]\n",
-      " [ 0.          0.         10.01204188]]\n",
+      "[[ 8  2  9]\n",
+      " [ 0  1  1]\n",
+      " [ 0  0 -4]]\n",
       "matriz L: \n",
-      "[[ 1.          0.          0.        ]\n",
-      " [ 0.03333333  1.          0.        ]\n",
-      " [ 0.1        -0.02712994  1.        ]]\n",
+      "[[1.    0.    0.   ]\n",
+      " [0.875 1.    0.   ]\n",
+      " [0.375 2.    1.   ]]\n",
       "B1 :\n",
-      "[[  7.85]\n",
-      " [-19.3 ]\n",
-      " [ 71.4 ]]\n",
-      "Y Sustitución hacia adelante\n",
-      "[[  7.85      ]\n",
-      " [-19.56166667]\n",
-      " [ 70.08429319]]\n",
-      "X Sustitución hacia atras\n",
-      "[[ 3. ]\n",
-      " [-2.5]\n",
-      " [ 7. ]]\n"
+      "[[4]\n",
+      " [2]\n",
+      " [7]]\n",
+      "Y Sustitución hacia adelante - Solución\n",
+      "[[ 4. ]\n",
+      " [-1.5]\n",
+      " [ 8.5]]\n",
+      "X Sustitución hacia atras - Solución\n",
+      "[[ 2.734375]\n",
+      " [ 0.625   ]\n",
+      " [-2.125   ]]\n"
      ]
     }
    ],
@@ -491,25 +433,11 @@
     "print(L)\n",
     "print('B1 :')\n",
     "print(B1)\n",
-    "print('Y Sustitución hacia adelante')\n",
+    "print(\"Y Sustitución hacia adelante - Solución\")\n",
     "print(Y)\n",
-    "print('X Sustitución hacia atras')\n",
+    "print('X Sustitución hacia atras - Solución')\n",
     "print(X)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Luego concatenamos U con Y y reemplazamos hacia atras "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
