Almost Finish point 2.4 and some corrections

--- a/1.MatrixOperations.ipynb
+++ b/1.MatrixOperations.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "        [4.1, 5. , 3. ]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "        [274]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "        [20.]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "        [4.2, 5. , 3. ]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "        [10.76923077]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "        [  5.30769231,  -4.92307692,   4.61538462]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "23.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "33.307692307692335"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "766.0769230769237"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "766.0769230769237"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "0.004347826086956545"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
    "source": [
     "## Conclusión\n",
     "\n",
-    "La cota superior del error relativo, nos indica qué tan sensible es el sistema de ecuaciones a cambios en los coeficientes. En este caso, significa que el sistema es altamente sensible dado que se estima que la solución puede ser hasta 333.07% superior o inferior al valor real."
+    "#### La cota superior del error relativo, nos indica qué tan sensible es el sistema de ecuaciones a cambios en los coeficientes. En este caso, significa que el sistema es altamente sensible dado que se estima que la solución puede ser hasta 333.07% superior o inferior al valor real. En los casos en los que no tenemos dos matrices para calcular la diferencia relativa, el número de condición de la matriz es un buen indicador para conocer si ésta está mal condicionada y, por lo tanto, nos permite evaluar qué tan precisa puede ser para estimar valores reales."
    ]
   }
  ],
