--- a/Taller2_3Algoritmo_sustitucion.ipynb
+++ b/Taller2_3Algoritmo_sustitucion.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -34,11 +34,12 @@
      "output_type": "stream",
      "text": [
       "Matriz:\n",
-      "[[7 3 9]\n",
-      " [8 2 9]\n",
-      " [3 3 1]]\n",
+      "[[7 2 1 1]\n",
+      " [9 9 8 3]\n",
+      " [7 4 8 9]\n",
+      " [5 6 2 3]]\n",
       "Vector:\n",
-      "[2 4 7]\n"
+      "[7 6 1 6]\n"
      ]
     }
    ],
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,18 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[8, 2, 9, 4],\n",
-       "       [7, 3, 9, 2],\n",
-       "       [3, 3, 1, 7]])"
+       "array([[9, 9, 8, 3, 6],\n",
+       "       [5, 6, 2, 3, 6],\n",
+       "       [7, 4, 8, 9, 1],\n",
+       "       [7, 2, 1, 1, 7]])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,18 +150,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[8, 2, 9],\n",
-       "       [7, 3, 9],\n",
-       "       [3, 3, 1]])"
+       "array([[9, 9, 8, 3],\n",
+       "       [5, 6, 2, 3],\n",
+       "       [7, 4, 8, 9],\n",
+       "       [7, 2, 1, 1]])"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 407,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4, 2, 7])"
+       "array([6, 6, 1, 7])"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,18 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8,  2,  9],\n",
-       "       [ 0,  1,  1],\n",
-       "       [ 0,  0, -4]])"
+       "array([[  9,   9,   8,   3],\n",
+       "       [  0,   1,  -2,   1],\n",
+       "       [  0,   0,  -5,   9],\n",
+       "       [  0,   0,   0, -23]])"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,18 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.   , 0.   , 0.   ],\n",
-       "       [0.875, 1.   , 0.   ],\n",
-       "       [0.375, 2.   , 1.   ]])"
+       "array([[ 1.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.55555556,  1.        ,  0.        ,  0.        ],\n",
+       "       [ 0.77777778, -3.        ,  1.        ,  0.        ],\n",
+       "       [ 0.77777778, -5.        ,  3.        ,  1.        ]])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,29 +266,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Resolver LY = B   donde Y = B1\n",
-    "B1  = np.transpose([B1])\n",
-    "AB =np.concatenate((L,B1),axis=1)"
+    "B2  = np.transpose([B1])\n",
+    "AB =np.concatenate((L,B2),axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.   , 0.   , 0.   , 4.   ],\n",
-       "       [0.875, 1.   , 0.   , 2.   ],\n",
-       "       [0.375, 2.   , 1.   , 7.   ]])"
+       "array([[6],\n",
+       "       [6],\n",
+       "       [1],\n",
+       "       [7]])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 413,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        ,  0.        ,  6.        ],\n",
+       "       [ 0.55555556,  1.        ,  0.        ,  0.        ,  6.        ],\n",
+       "       [ 0.77777778, -3.        ,  1.        ,  0.        ,  1.        ],\n",
+       "       [ 0.77777778, -5.        ,  3.        ,  1.        ,  7.        ]])"
+      ]
+     },
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,18 +323,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4. ],\n",
-       "       [-1.5],\n",
-       "       [ 8.5]])"
+       "array([[6.        ],\n",
+       "       [2.66666667],\n",
+       "       [4.33333333],\n",
+       "       [2.66666667]])"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,18 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8. ,  2. ,  9. ,  4. ],\n",
-       "       [ 0. ,  1. ,  1. , -1.5],\n",
-       "       [ 0. ,  0. , -4. ,  8.5]])"
+       "array([[  9.        ,   9.        ,   8.        ,   3.        ,\n",
+       "          6.        ],\n",
+       "       [  0.        ,   1.        ,  -2.        ,   1.        ,\n",
+       "          2.66666667],\n",
+       "       [  0.        ,   0.        ,  -5.        ,   9.        ,\n",
+       "          4.33333333],\n",
+       "       [  0.        ,   0.        ,   0.        , -23.        ,\n",
+       "          2.66666667]])"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,18 +387,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.734375],\n",
-       "       [ 0.625   ],\n",
-       "       [-2.125   ]])"
+       "array([[ 1.02930757],\n",
+       "       [ 0.63188406],\n",
+       "       [-1.07536232],\n",
+       "       [-0.11594203]])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -395,30 +431,33 @@
      "output_type": "stream",
      "text": [
       "Pivoteo parcial por filas: AB\n",
-      "[[8 2 9 4]\n",
-      " [7 3 9 2]\n",
-      " [3 3 1 7]]\n",
+      "[[9 9 8 3 6]\n",
+      " [5 6 2 3 6]\n",
+      " [7 4 8 9 1]\n",
+      " [7 2 1 1 7]]\n",
       "eliminación hacia adelante\n",
       "Matriz U: \n",
-      "[[ 8  2  9]\n",
-      " [ 0  1  1]\n",
-      " [ 0  0 -4]]\n",
+      "[[  9   9   8   3]\n",
+      " [  0   1  -2   1]\n",
+      " [  0   0  -5   9]\n",
+      " [  0   0   0 -23]]\n",
       "matriz L: \n",
-      "[[1.    0.    0.   ]\n",
-      " [0.875 1.    0.   ]\n",
-      " [0.375 2.    1.   ]]\n",
+      "[[ 1.          0.          0.          0.        ]\n",
+      " [ 0.55555556  1.          0.          0.        ]\n",
+      " [ 0.77777778 -3.          1.          0.        ]\n",
+      " [ 0.77777778 -5.          3.          1.        ]]\n",
       "B1 :\n",
-      "[[4]\n",
-      " [2]\n",
-      " [7]]\n",
+      "[6 6 1 7]\n",
       "Y Sustitución hacia adelante - Solución\n",
-      "[[ 4. ]\n",
-      " [-1.5]\n",
-      " [ 8.5]]\n",
+      "[[6.        ]\n",
+      " [2.66666667]\n",
+      " [4.33333333]\n",
+      " [2.66666667]]\n",
       "X Sustitución hacia atras - Solución\n",
-      "[[ 2.734375]\n",
-      " [ 0.625   ]\n",
-      " [-2.125   ]]\n"
+      "[[ 1.02930757]\n",
+      " [ 0.63188406]\n",
+      " [-1.07536232]\n",
+      " [-0.11594203]]\n"
      ]
     }
    ],
@@ -437,6 +476,100 @@
     "print(Y)\n",
     "print('X Sustitución hacia atras - Solución')\n",
     "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a solucionar la Matriz L (triangular inferior), donde, en caso de infinitas soluciones, retorna una solución partular y una base para el espacio nulo de L."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#se utiliza para encontrar una solución única para una matriz triangular inferior L y un vector B1 dados\n",
+    "def unica_solucion(L, B1):\n",
+    "    n = len(L)\n",
+    "    x = np.zeros(n)\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        x[i] = B1[i]\n",
+    "        for j in range(i):\n",
+    "            x[i] -= L[i][j] * x[j]\n",
+    "        x[i] /= L[i][i]\n",
+    "\n",
+    "    return x\n",
+    "\n",
+    "#se utiliza para encontrar un número infinito de soluciones para una matriz triangular inferior L y un vector B1 dados.\n",
+    "def infinitas_soluciones(L, B1):\n",
+    "    n = len(L)\n",
+    "    x = np.zeros(n)\n",
+    "\n",
+    "    free_vectors_bases = {}\n",
+    "    has_free_vectors = False\n",
+    "    for i in range(n):\n",
+    "        if L[i][i] == 0:\n",
+    "            net = B1[i]\n",
+    "            for j in range(i):\n",
+    "                net -= L[i][j] * x[j]\n",
+    "            if net != 0:\n",
+    "                raise Exception(\"No existe solución\")\n",
+    "            free_vector_base = np.zeros(n)\n",
+    "            free_vector_base[i] = 1\n",
+    "            free_vectors_bases[i] = free_vector_base\n",
+    "            has_free_vectors = True\n",
+    "        else:\n",
+    "            if has_free_vectors:\n",
+    "                x[i] += B1[i] / L[i][i]\n",
+    "                for j in range(i):\n",
+    "                    if j in free_vectors_bases:\n",
+    "                        free_vectors_bases[j][i] -= (L[i][j]) / L[i][i]\n",
+    "                    else:\n",
+    "                        x[i] -= (L[i][j] * x[j]) / L[i][i]\n",
+    "            else:\n",
+    "                x[i] = B1[i]\n",
+    "                for j in range(i):\n",
+    "                    x[i] -= L[i][j] * x[j]\n",
+    "                x[i] /= L[i][i]\n",
+    "\n",
+    "    return x, list(free_vectors_bases.values())\n",
+    "\n",
+    "# Se hace el metodo de sustitución hacia adelante\n",
+    "def sustitucion_adelante(L, B1):\n",
+    "    diag = np.diag(L)\n",
+    "    has_infinite_solutions = np.any(diag == 0)\n",
+    "    if has_infinite_solutions:\n",
+    "        x, free_vectors_bases = infinitas_soluciones(L, B1)\n",
+    "        print(\"Si existen soluciones infinitas\")\n",
+    "        print(\"La solución particular es:\", x)\n",
+    "        print(\"La base para el espacio nulo:\", free_vectors_bases)\n",
+    "        return x, free_vectors_bases\n",
+    "    else:\n",
+    "        result = unica_solucion(L, B1)\n",
+    "        print(\"Existe solución única:\\n\", result)\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 420,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existe solución única:\n",
+      " [6.         2.66666667 4.33333333 2.66666667]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = sustitucion_adelante(L, B1)"
    ]
   }
  ],
